# cue

./: CLAUDE.md  Cargo.toml  PLAYLIST_ALBUM_PLAN.md  README.md  dist-workspace.toml  facelift-v2.md  install.sh
src/: anon.rs  auth.rs  client.rs  lyrics.rs  main.rs  ui.rs
src/commands/: devices.rs  mod.rs  play.rs  player.rs  queue.rs  radio.rs  search.rs  volume.rs
tests/: lrclib_integration.rs
