[package]
name = "cue"
version = "0.1.0"
edition = "2021"
description = "A command-line Spotify remote control"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rspotify = { version = "0.13", default-features = false, features = ["client-ureq"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
