[package]
name = "cue"
version = "0.1.0"
edition = "2021"
description = "A command-line Spotify remote control"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = "0.4"
console = "0.15"
dialoguer = "0.11"
dirs = "5"
fuzzy-matcher = "0.3"
indicatif = "0.17"
rspotify = { version = "0.13", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
ratatui = "0.29"
toml = "0.8"
